@@ -1,19 +1,22 @@
 package org.game.client.components;
 
+import lombok.Getter;
+
 import java.awt.*;
 import java.util.ArrayList;
 import java.util.List;
 
 public class ChatUI {
+    @Getter
     private boolean chatOpen = false;
-    private StringBuilder currentMessage = new StringBuilder();
-    private List<ChatEntry> chatHistory = new ArrayList<>();
+    private final StringBuilder currentMessage = new StringBuilder();
+    private final List<ChatEntry> chatHistory = new ArrayList<>(MAX_MESSAGES);
     private static final int MAX_MESSAGES = 10;
     private static final int MESSAGE_DISPLAY_TIME = 5000;
 
     public void toggleChat() {
         chatOpen = !chatOpen;
-        if (!chatOpen && currentMessage.length() > 0) {
+        if (!chatOpen && !currentMessage.isEmpty()) {
             currentMessage.setLength(0);
         }
     }
@@ -25,7 +28,7 @@ public class ChatUI {
     }
 
     public void removeCharacter() {
-        if (chatOpen && currentMessage.length() > 0) {
+        if (chatOpen && !currentMessage.isEmpty()) {
             currentMessage.deleteCharAt(currentMessage.length() - 1);
         }
     }
@@ -41,15 +44,11 @@ public class ChatUI {
     public void addMessage(String playerName, String message) {
         chatHistory.add(new ChatEntry(playerName, message, System.currentTimeMillis()));
         if (chatHistory.size() > MAX_MESSAGES) {
-            chatHistory.remove(0);
+            chatHistory.removeFirst();
         }
     }
 
-    public boolean isChatOpen() {
-        return chatOpen;
-    }
-
-    public void render(Graphics2D g2, int screenWidth, int screenHeight) {
+    public void render(Graphics2D g2, int screenHeight, int width) {
         long currentTime = System.currentTimeMillis();
         chatHistory.removeIf(entry -> !chatOpen && currentTime - entry.timestamp > MESSAGE_DISPLAY_TIME);
 
@@ -72,10 +71,10 @@ public class ChatUI {
 
         if (chatOpen) {
             g2.setColor(new Color(0, 0, 0, 200));
-            g2.fillRect(10, screenHeight - 50, 300, 30);
+            g2.fillRect(10, screenHeight - 50, width, 30);
             g2.setColor(Color.WHITE);
-            g2.drawRect(10, screenHeight - 50, 300, 30);
-            g2.drawString("Chat: " + currentMessage.toString() + "_", 15, screenHeight - 30);
+            g2.drawRect(10, screenHeight - 50, width, 30);
+            g2.drawString("Chat: " + currentMessage + "_", 15, screenHeight - 30);
         }
     }
 
